[package]
name = "resas-downloader"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "sample_request"
path = "src/bin/sample_request.rs"

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.96"}
arrow = {version = "37.0.0"}
itertools = {version = "0.10.5"}
parquet = {version = "37.0.0"}
clap = {version = "4.2.2", features = ["derive"]}

